@@ -470,7 +470,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   ApiRsdServiceApis for extensions to add their own service to the services 
   list.
 * The HTML of diff output markers has changed. Hyphens are now minus signs, 
-  empty markers are now filled with non-breaking-space characters.
+  empty markers are now filled with non-breaking-space characters
+* (bug 25741) Add more data to list=search's srprop
 
 === Languages updated in 1.17 ===
 
